--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -1,7 +1,15 @@
 ---
 cannonicalUrl: 'https://bradystroud.dev/maui-vs-flutter'
-title: MAUI vs Flutter — Multi-platform frameworks showdown
+coverImage: /uploads/grrr.webp
+title: .NET MAUI vs Flutter — Multi-platform frameworks showdown
 date: 2022-07-22T14:30:00.000Z
+tags:
+  - maui-ui-july
+  - cross-platform
+  - maui
+  - .net
+  - flutter
+  - .net-maui
 ---
 
 Here it is — my post for [MAUI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
@@ -14,7 +22,7 @@ MAUI (Multi-platform App UI) is a framework from Microsoft.
 
 ✅ **Pros**:
 
-* .NET — MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favourite Nuget packages
+* .NET — MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favorite Nuget packages
 
 ❌ **Cons**:
 
@@ -39,22 +47,31 @@ Built, maintained and used by Google, Flutter boasts the ability to deploy to mo
 
 These are the important considerations when deciding between MAUI and Flutter.
 
-* **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. See [Blazor Hybrid](https://docs.microsoft.com/en-us/aspnet/core/blazor/hybrid/tutorials/maui)
-* **Markup Language**: Flutter doesn’t have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML. More info: [Flutter FAQ](https://docs.flutter.dev/resources/faq#where-is-flutters-markup-language-why-doesnt-flutter-have-a-markup-syntax)
+* **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. \
+  See [Blazor Hybrid](https://docs.microsoft.com/en-us/aspnet/core/blazor/hybrid/tutorials/maui)
+* **Markup Language**: Flutter doesn’t have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML.  \
+  More info: [Flutter FAQ](https://docs.flutter.dev/resources/faq#where-is-flutters-markup-language-why-doesnt-flutter-have-a-markup-syntax)
 * **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It’s possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don’t need to do with MAUI.
-  * 👎 Flutter app looks out of place on iOS
-  * 👍 iOS MAUI App uses native components
+
+![](/uploads/hello-world.webp)
+
+👎 Flutter app looks out of place on iOS
+
+![](/uploads/maui-hello-world.webp)
+
+👍 iOS MAUI App uses native components
 
 ## 📸 Which is more popular?
 
-Google trends report\
-Google Trends comparison of MAUI and Flutter
+![](/uploads/google-trends.webp)Google Trends comparison of MAUI and Flutter
 
 Flutter seems to be far more popular than MAUI. This is expected as MAUI has only been generally available since May.
 
-*Note: I used ‘.net maui’ instead of ‘maui’ to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results.*
+> ***Note: I used ‘.net maui’ instead of ‘maui’ to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results.***
 
-## 🧑‍💻 Development experience
+\
+🧑‍💻 Development experience
+----------------------------
 
 ### MAUI
 
