Start Insta feed idea

--- a/content/blogs/maui-blazor.mdx
+++ b/content/blogs/maui-blazor.mdx
@@ -13,7 +13,7 @@ tags:
   - blazor
 ---
 
-Another post for Matt Goldman’s MAUI UI July! [MAUI UI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
+Another post for Matt Goldman's MAUI UI July! [MAUI UI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
 
 ## 🙋 **What is MAUI Blazor?**
 
