--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -26,7 +26,7 @@ MAUI (Multi-platform App UI) is a framework from Microsoft.
 
 ❌ **Cons**:
 
-* Immature — Released in May 2022, MAUI hasn’t had a chance to be put to the test
+* Immature — Released in May 2022, MAUI hasn't had a chance to be put to the test
 
 ## Flutter
 
@@ -49,9 +49,9 @@ These are the important considerations when deciding between MAUI and Flutter.
 
 * **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. \
   See [Blazor Hybrid](https://docs.microsoft.com/en-us/aspnet/core/blazor/hybrid/tutorials/maui)
-* **Markup Language**: Flutter doesn’t have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML.  \
+* **Markup Language**: Flutter doesn't have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML.  \
   More info: [Flutter FAQ](https://docs.flutter.dev/resources/faq#where-is-flutters-markup-language-why-doesnt-flutter-have-a-markup-syntax)
-* **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It’s possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don’t need to do with MAUI.
+* **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It's possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don't need to do with MAUI.
 
 ![](/uploads/hello-world.webp)
 
@@ -67,7 +67,7 @@ These are the important considerations when deciding between MAUI and Flutter.
 
 Flutter seems to be far more popular than MAUI. This is expected as MAUI has only been generally available since May.
 
-> ***Note: I used ‘.net maui’ instead of ‘maui’ to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results.***
+> ***Note: I used ‘.net maui' instead of ‘maui' to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results.***
 
 \
 🧑‍💻 Development experience
