--- a/content/blogs/cultral-exchange.mdx
+++ b/content/blogs/cultral-exchange.mdx
@@ -9,5 +9,5 @@ tags:
 
 TODO: Write about this post
 
-[https://www.linkedin.com/posts/bradystroud\_bonjour-i-just-got-home-from-my-cultural-activity-7198210517566431233-TgRT](https://www.linkedin.com/posts/bradystroud_bonjour-i-just-got-home-from-my-cultural-activity-7198210517566431233-TgRT)
+[This linkedIn post](https://www.linkedin.com/posts/bradystroud_bonjour-i-just-got-home-from-my-cultural-activity-7198210517566431233-TgRT)
 
