--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: 'https://bradystroud.dev/maui-vs-flutter'
+cannonicalUrl: "https://bradystroud.dev/maui-vs-flutter"
 coverImage: /uploads/grrr.webp
 title: .NET MAUI vs Flutter — Multi-platform frameworks showdown
 date: 2022-07-22T14:30:00.000Z
@@ -12,21 +12,21 @@ tags:
   - .net-maui
 ---
 
-Here it is — my post for [MAUI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
+Here it is — my post for [.NET MAUI July](https://goforgoldman.com/2022/05/19/maui-ui-july.html)
 
-## MAUI
+## .NET MAUI
 
-MAUI (Multi-platform App UI) is a framework from Microsoft.
+.NET MAUI (Multi-platform App UI) is a framework from Microsoft.
 
 [Docs](https://docs.microsoft.com/en-us/dotnet/maui/get-started/first-app)
 
 ✅ **Pros**:
 
-* .NET — MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favorite Nuget packages
+- .NET — MAUI is built on to the .NET ecosystem. This means .NET developers will feel at home and be able to use their favorite Nuget packages
 
 ❌ **Cons**:
 
-* Immature — Released in May 2022, MAUI hasn't had a chance to be put to the test
+- Immature — Released in May 2022, MAUI hasn't had a chance to be put to the test
 
 ## Flutter
 
@@ -36,22 +36,22 @@ Built, maintained and used by Google, Flutter boasts the ability to deploy to mo
 
 ✅ **Pros**:
 
-* Maturity — Flutter 1.0 was launched in December 2018 and has had time to build a community
-* More supported platforms — Runs on Linux 🐧
+- Maturity — Flutter 1.0 was launched in December 2018 and has had time to build a community
+- More supported platforms — Runs on Linux 🐧
 
 ❌ **Cons**:
 
-* Dart — To build Flutter apps, developers will need to learn a new language.
+- Dart — To build Flutter apps, developers will need to learn a new language.
 
 ## 🤔 The key differences
 
 These are the important considerations when deciding between MAUI and Flutter.
 
-* **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. \
+- **Web Deployment**: Flutter apps can be deployed to the web. This isn't possible with MAUI but you can create a solution that shares Blazor UI code between a Blazor app and MAUI app. \
   See [Blazor Hybrid](https://docs.microsoft.com/en-us/aspnet/core/blazor/hybrid/tutorials/maui)
-* **Markup Language**: Flutter doesn't have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML.  \
+- **Markup Language**: Flutter doesn't have a markup language — All UI is defined in code (Dart). MAUI lets developers define UI in XAML. \
   More info: [Flutter FAQ](https://docs.flutter.dev/resources/faq#where-is-flutters-markup-language-why-doesnt-flutter-have-a-markup-syntax)
-* **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It's possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don't need to do with MAUI.
+- **Native UI**: Using Flutter without any extra configuration, your UI will look great on Android, but out of place on all other platforms. MAUI apps use native components and look at home on all supported platforms. It's possible to make Flutter apps look native on iOS using the Cupertino widgets, but this is extra work developers don't need to do with MAUI.
 
 ![](/uploads/hello-world.webp)
 
@@ -67,29 +67,30 @@ These are the important considerations when deciding between MAUI and Flutter.
 
 Flutter seems to be far more popular than MAUI. This is expected as MAUI has only been generally available since May.
 
-> ***Note: I used ‘.net maui' instead of ‘maui' to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results.***
+> **_Note: I used ‘.net maui' instead of ‘maui' to avoid confusion between Maui, the Island in Hawaii, and Maui, the Disney movie character. This could have impacted the results._**
 
 \
 🧑‍💻 Development experience
-----------------------------
+
+---
 
 ### MAUI
 
 [Docs](https://docs.microsoft.com/en-us/dotnet/maui/get-started/first-app)
 
-* **Installation**: At the time of writing this, installing MAUI is only documented for Windows. Visual Studio 2022 makes installation very easy.
-* **Hello World**: You can create new apps using `dotnet new maui` or through VS 2022.
-* **Debugging**: You can debug or run your MAUI app using `dotnet run`, but the best dev experience will be using VS 2022.
-* **IDE**: VS 2022 is recommended, but I found JetBrains Rider supports MAUI pretty well.
+- **Installation**: At the time of writing this, installing MAUI is only documented for Windows. Visual Studio 2022 makes installation very easy.
+- **Hello World**: You can create new apps using `dotnet new maui` or through VS 2022.
+- **Debugging**: You can debug or run your MAUI app using `dotnet run`, but the best dev experience will be using VS 2022.
+- **IDE**: VS 2022 is recommended, but I found JetBrains Rider supports MAUI pretty well.
 
 ### Flutter
 
 [Docs](https://docs.flutter.dev/get-started/install)
 
-* **Installation**: The steps to install Flutter were easy. The process is well documented for Windows, macOS, Linux, and even ChromeOS!
-* **Hello World**: Creating a new Flutter app is as easy as running `flutter create new_app` in a terminal.
-* **Debugging**: You can run your Flutter app on any target using the `flutter run` command.
-* **IDE**: The Flutter team recommends you use Android Studio or VS Code to build your app.
+- **Installation**: The steps to install Flutter were easy. The process is well documented for Windows, macOS, Linux, and even ChromeOS!
+- **Hello World**: Creating a new Flutter app is as easy as running `flutter create new_app` in a terminal.
+- **Debugging**: You can run your Flutter app on any target using the `flutter run` command.
+- **IDE**: The Flutter team recommends you use Android Studio or VS Code to build your app.
 
 ## 📖 Summary
 
