Fix canonical URLS

--- a/content/blogs/cultral-exchange.mdx
+++ b/content/blogs/cultral-exchange.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: 'https://bradystroud.dev/cultral-exchange'
+cannonicalUrl: 'https://bradystroud.dev/blogs/cultral-exchange'
 title: Cultral Exchange
 date: 2022-07-27T14:30:00.000Z
 tags:
