--- a/content/blogs/maui-blazor.mdx
+++ b/content/blogs/maui-blazor.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: 'https://bradystroud.dev/maui-blazor'
+cannonicalUrl: 'https://bradystroud.dev/blogs/maui-blazor'
 coverImage: /uploads/header-.net-maui-blazor.webp
 title: .NET MAUI Blazor template — Build your UI once
 date: 2022-07-27T14:30:00.000Z
