--- a/content/blogs/loading-guards-in-blazor.mdx
+++ b/content/blogs/loading-guards-in-blazor.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: "https://bradystroud.dev/blogs/loading-guards-in-blazor"
+canonicalUrl: "https://bradystroud.dev/blogs/loading-guards-in-blazor"
 title: 🚦 Loading Guards in Blazor - Stop Writing Null-Checks Everywhere
 coverImage: null
 date: 2025-04-15T10:00:00.000Z
