--- a/content/blogs/maui-vs-flutter.mdx
+++ b/content/blogs/maui-vs-flutter.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: "https://bradystroud.dev/blogs/maui-vs-flutter"
+canonicalUrl: "https://bradystroud.dev/blogs/maui-vs-flutter"
 coverImage: /uploads/grrr.webp
 title: .NET MAUI vs Flutter — Multi-platform frameworks showdown
 date: 2022-07-22T14:30:00.000Z
