--- a/content/blogs/professional-growth.mdx
+++ b/content/blogs/professional-growth.mdx
@@ -1,5 +1,5 @@
 ---
-cannonicalUrl: "https://bradystroud.dev/blogs/professional-growth"
+canonicalUrl: "https://bradystroud.dev/blogs/professional-growth"
 title: Guide to professional Growth
 date: 2024-07-28T14:30:00.000Z
 tags:
