Improves intro for clarity and invites contributions
Rewrites the introduction for brevity and clarity,
making the purpose of the guide more explicit.
Encourages readers to submit PRs for corrections
or additions via GitHub.

--- a/content/blogs/openai-model-cheatsheet.mdx
+++ b/content/blogs/openai-model-cheatsheet.mdx
@@ -11,11 +11,13 @@ tags:
 coverImage: null
 ---
 
-Let's be honest: OpenAI's model names are a moving target. Just when you've learned what “GPT-4 Turbo” means, along comes “GPT-4o,” “o4-mini,” or “GPT-4.1”—and sometimes, the same model gets renamed or quietly replaced. The pace of releases is relentless, and the branding is anything but intuitive. Even experienced developers and AI enthusiasts find themselves double-checking docs, changelogs, and blog posts just to figure out which model is current, which is best for their use case, and what all those suffixes actually mean.
+OpenAI model naming has been confusing from the start. The names are very confusing (e.g. o4, 4o), and new versions drop constantly, and it's hard to keep track of what model is the best for what job.
 
-If you feel like you're always a step behind, you're not alone. This cheat sheet exists because the model zoo keeps growing, the names keep shifting, and the only constant is change. Hopefully, this guide helps you cut through the confusion and pick the right model for your needs—at least until the next round of updates drops!
+This guide is my attempt to fix that — a quick reference I can use whenever I need to choose the right model for a job.
 
 This is a living document and I've probably made some mistakes while writing it, so feel free to suggest changes or additions. I'll keep it updated as OpenAI rolls out new models and features 🚀
+If you see something missing, or a mistake, please [make a PR](https://github.com/bradystroud/blog/edit/main/content/blogs/openai-model-cheatsheet.mdx)! this page is stored as markdown in GitHub using [TinaCMS 🦙](https://tina.io)
+
 
 ---
 
