Rewrites introduction for clarity and brevity
Simplifies and clarifies the opening paragraph to make the guide’s purpose and model naming confusion more immediately apparent for readers.

--- a/content/blogs/openai-model-cheatsheet.mdx
+++ b/content/blogs/openai-model-cheatsheet.mdx
@@ -11,9 +11,7 @@ tags:
 coverImage: null
 ---
 
-OpenAI model naming has been confusing from the start. The names are very confusing (e.g. o4, 4o), and new versions drop constantly, and it's hard to keep track of what model is the best for what job.
-
-This guide is my attempt to fix that — a quick reference I can use whenever I need to choose the right model for a job.
+OpenAI’s model names (e.g., o4, 4o) are confusing and change often. This guide is my quick reference for picking the best model for any task.
 
 This is a living document and I've probably made some mistakes while writing it, so feel free to suggest changes or additions. I'll keep it updated as OpenAI rolls out new models and features 🚀
 If you see something missing, or a mistake, please [make a PR](https://github.com/bradystroud/blog/edit/main/content/blogs/openai-model-cheatsheet.mdx)! this page is stored as markdown in GitHub using [TinaCMS 🦙](https://tina.io)
