Update MAUI setup instructions for clarity and add Windows testing section

--- a/content/blogs/maui-setup-macos.mdx
+++ b/content/blogs/maui-setup-macos.mdx
@@ -10,7 +10,7 @@ tags:
 coverImage: null
 ---
 
-Getting started with .NET MAUI on macOS is straight forward once you know the tooling you need. With a single installation you can build and deploy to iOS, Android, macOS and even Windows through Mac Catalyst.
+Getting started with .NET MAUI on macOS is straight forward once you know the tooling you need. With a single installation you can build and debug on iOS, Android, macOS.
 
 ## Install the .NET MAUI workload
 
@@ -48,4 +48,8 @@ dotnet run
 
 This launches a build for the default platform. You can target iOS or Android specifically using the `-f` flag (`net8.0-ios`, `net8.0-android`, etc.).
 
-That’s it! With these three components installed on macOS you can start building and debugging .NET MAUI applications across all supported platforms.
+That's it! With these three components installed on macOS you can start building and debugging .NET MAUI applications across all supported platforms.
+
+## Windows
+
+To test your MAUI app on Windows, you can use a VM or dual-boot setup with Windows.
