Update cultural exchange blog post with new images and reflections

--- a/content/blogs/cultural-exchange.mdx
+++ b/content/blogs/cultural-exchange.mdx
@@ -20,9 +20,9 @@ I thoroughly enjoyed my trip to France - not only did I learn a lot about the co
 
 I had been to France before with family, but this trip was completely different. I was using my own money, I had to work out how to get around and plan my own schedule, and the biggest thing was I was traveling alone for the first time. It was a great experience that pushed me out of my comfort zone and taught me so much about independence and adaptability.
 
-## The People Made All the Difference
-
 Thanks to Gilles Pothieu and Hugo Pernet for your helpfulness while I was in Strasbourg 🙏🏼 Having local colleagues who were willing to show me around and help me navigate both work and life in France made all the difference.
+
+My friend from SSW Brisbane, Tylah, also started is exchange in my last week. It was great to have a familiar face around, and show him around the city. We even got to visit Riquewhir, another beautiful village in Alsace.
 
 ## Reflection
 
@@ -30,13 +30,14 @@ I am very thankful to have the opportunity to travel with help from SSW.
 
 For anyone considering a similar opportunity, I'd say go for it. The challenges you'll face traveling alone are exactly what make the experience so valuable.
 
-Some of the highlights of my trip included:
-
-![Figure: Gilles and Hugo took me to see this awesome castle south of Strasbourg](/cultural-exchange/epic-castle.jpeg)
+![Figure: Gilles and Hugo took me to see this awesome castle south of Strasbourg](/cultural-exchange/epic-castle-hd.jpeg)
 **Figure: Gilles and Hugo took me to see this awesome castle south of Strasbourg**
 
 ![Strasbourg](/cultural-exchange/strasbourg.jpeg)
 **Figure: The classic Strasbourg shot**
+
+![Figure: Tylah, Hugo, Gilles and his family - visiting Riquewhir](/cultural-exchange/people.jpeg)
+**Figure: Tylah, Hugo, Gilles and his family - visiting Riquewhir**
 
 📸 Check out my [Instagram](https://lnkd.in/gWP2irbn) for more photos from the trip!
 
