Refactor breadcrumb and header components to use legacy behavior for Link elements

--- a/content/blogs/app-framework-decision-tree.mdx
+++ b/content/blogs/app-framework-decision-tree.mdx
@@ -1,6 +1,6 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/app-framework-decision-tree"
-coverImage: null
+coverImage: /uploads/mobile-app-decision-tree.webp
 title: The Right Mobile App Framework - Comprehensive Decision Tree
 date: 2025-03-12T07:30:00.000Z
 tags:
