--- a/content/blogs/cultural-exchange.mdx
+++ b/content/blogs/cultural-exchange.mdx
@@ -2,6 +2,7 @@
 canonicalUrl: "https://bradystroud.dev/blogs/cultural-exchange"
 title: Cultural Exchange - 2 Months with SSW France
 date: 2024-07-27T14:30:00.000Z
+coverImage: "/cultural-exchange/strasbourg.jpeg"
 tags:
   - france
   - travel
