Add link to Tylah Kapa's profile in cultural exchange blog post

--- a/content/blogs/cultural-exchange.mdx
+++ b/content/blogs/cultural-exchange.mdx
@@ -23,7 +23,7 @@ I had been to France before with family, but this trip was completely different.
 
 Thanks to Gilles Pothieu and Hugo Pernet for your helpfulness while I was in Strasbourg 🙏🏼 Having local colleagues who were willing to show me around and help me navigate both work and life in France made all the difference.
 
-My friend from SSW Brisbane, Tylah, also started is exchange in my last week. It was great to have a familiar face around, and show him around the city. We even got to visit Riquewhir, another beautiful village in Alsace.
+My friend from SSW Brisbane, [Tylah kapa](https://www.kapa.dev/about), also started is exchange in my last week. It was great to have a familiar face around, and show him around the city. We even got to visit Riquewhir, another beautiful village in Alsace.
 
 ## Reflection
 
