--- a/content/blogs/aspire-windows-vm-using-mac-docker.mdx
+++ b/content/blogs/aspire-windows-vm-using-mac-docker.mdx
@@ -1,4 +1,3 @@
----
 canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm-using-mac-docker"
 title: "Running .NET Aspire in a Windows VM While Using Docker on the Mac Host"
 date: 2025-09-29T00:00:00.000Z
@@ -11,6 +10,8 @@ tags:
   - parallels
   - devops
 ---
+
+> This article is the origin story & reasoning. For the current, hardened process (SSH hardening, clean shells, port strategy, diagnostics) skip straight to **[Part 2: Hardening & Port Strategy](./aspire-windows-vm-using-mac-docker-part-2)**.
 
 ## The Problem
 
@@ -205,3 +206,9 @@ No. It inherits the environment (Docker context) of the shell launching it.
 You develop in Windows. Docker lives on macOS. An SSH-based Docker context stitches them together. Aspire just works—and you avoid duplicated engines, sluggish virtualization layers, and image sprawl.
 
 Let me know if you want an automated setup script for provisioning the context and validating connectivity.
+
+---
+
+### Continue to Part 2
+
+Next: **[Running .NET Aspire from a Windows VM Using macOS Docker – Part 2: Hardening & Port Strategy](./aspire-windows-vm-using-mac-docker-part-2)** for passwordless SSH setup, clean non-interactive shells, tunneling vs publishing ports, diagnostics toolbox, and troubleshooting patterns.
