--- a/content/blogs/aspire-windows-vm-part-2.mdx
+++ b/content/blogs/aspire-windows-vm-part-2.mdx
@@ -1,5 +1,5 @@
 ---
-canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm-using-mac-docker-part-2"
+canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm-part-2"
 title: "Running .NET Aspire from a Windows VM Using macOS Docker – Part 2: Hardening & Port Strategy"
 date: 2025-09-29T00:00:00.000Z
 tags:
@@ -11,6 +11,7 @@ tags:
   - parallels
   - networking
   - devops
+coverImage: null
 ---
 
 > This is the canonical guide. **Part 1** is optional historical context (the journey + motivation). If you just want the right, hardened process—stay here. Skim **[Part 1](./aspire-windows-vm-using-mac-docker)** only if you care about the backstory.
