--- a/content/blogs/aspire-windows-vm.mdx
+++ b/content/blogs/aspire-windows-vm.mdx
@@ -1,4 +1,5 @@
-canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm-using-mac-docker"
+---
+canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm"
 title: "Running .NET Aspire in a Windows VM While Using Docker on the Mac Host"
 date: 2025-09-29T00:00:00.000Z
 tags:
@@ -9,6 +10,7 @@ tags:
   - windows
   - parallels
   - devops
+coverImage: null
 ---
 
 > This article is the origin story & reasoning. For the current, hardened process (SSH hardening, clean shells, port strategy, diagnostics) skip straight to **[Part 2: Hardening & Port Strategy](./aspire-windows-vm-using-mac-docker-part-2)**.
