Refactor blog titles for clarity, update blog dates, and refresh sitemap last modified timestamps

--- a/content/blogs/aspire-windows-vm.mdx
+++ b/content/blogs/aspire-windows-vm.mdx
@@ -1,6 +1,6 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/aspire-windows-vm"
-title: "Running .NET Aspire in a Windows VM While Using Docker on the Mac Host"
+title: ".NET Aspire in Windows VM using Docker on the Mac Host"
 date: 2025-09-29T00:00:00.000Z
 tags:
   - dotnet
