Remove 'troubleshooting' tag from PowerShell session fix blog post

--- a/content/blogs/vscode-powershell-session-fix.mdx
+++ b/content/blogs/vscode-powershell-session-fix.mdx
@@ -1,12 +1,11 @@
 ---
-canonicalUrl: "https://bradystroud.dev/blogs/vscode-powershell-session-fix"
+canonicalUrl: https://bradystroud.dev/blogs/vscode-powershell-session-fix
 title: "Fixing the 'PowerShell session not found' issue in VS Code"
 date: 2025-10-03T00:00:00.000Z
 tags:
   - vscode
   - powershell
   - macos
-  - troubleshooting
 coverImage: null
 ---
 
