Fix formatting in mobile app framework decision tree blog post for improved readability

--- a/content/blogs/app-framework-decision-tree.mdx
+++ b/content/blogs/app-framework-decision-tree.mdx
@@ -31,8 +31,7 @@ Often, a web app or [PWA](https://web.dev/explore/progressive-web-apps) suffices
 
 ## Do you need a cross-platform app?
 
-I can only think of a few scenarios where you don't need a cross-platform app
-(e.g. You might build an iOS app that provides some functionality that's already available on Android)
+I can only think of a few scenarios where you don't need a cross-platform app (e.g. You might build an iOS app that provides some functionality that's already available on Android)
 
 Even if you're building something to solve a problem that only applies to a single platform, you should still build a cross platform app to future proof.
 If you're going to go to the effort of building a mobile app, **do it right - use a cross platform framework**.
