--- a/content/blogs/connect-windows-vm-to-mac-apis.mdx
+++ b/content/blogs/connect-windows-vm-to-mac-apis.mdx
@@ -9,6 +9,9 @@ tags:
   - dotnet
 ---
 
+TEST
+
+
 > **Part 2 of the Windows VM + Mac series.** This is the ultimate solution for connecting Windows VMs to Mac-hosted services. For the foundational Docker context approach, see **[Part 1: Running .NET Aspire in a Windows VM](./aspire-windows-vm)**.
 
 When developing distributed applications, it's common to run different components on separate environments. A frequent scenario is hosting backend APIs on a macOS machine while consuming them from a Windows-based client application running inside a virtual machine (VM). This setup works well with tools like Parallels Desktop or VMware Fusion, but requires a bit of networking and certificate setup.
